# 20875research

./: README.md  test_quick_sort_cannot_use.c
Cuda_example_Kulkarni/: Copyright.txt  README.txt
Cuda_example_Kulkarni/DM/: README.txt
Cuda_example_Kulkarni/GPU/: .gitignore
Cuda_example_Kulkarni/SHM/: Makefile.common
_ref/: CMakeLists.txt
analyze block thread speed/: power_plot.py
gpu_cuda_try0/test_2_global/: kernel.cu  (+2 more)
gpu_try/: main.c
one_KDtree/: driver.py  kdtree.py
q_sort_EX/: qs.c
tree treversal without stack and recursion/: withoutstackrecurTreeTraversal.py
try SSE/: CMakeLists.txt  main.c
try2/: CMakeLists.txt  try_swap_pointer.c
try_cpp/: build_kd_tree.cpp  for_loop.c  intmax.c
try_memcpy_swap/: swap.c
try_python/: binary_with_iter.py
two_bintree_approximate/: CMakeLists.txt  J_SIMD.c  README  main.c  main.c.bak.cpu  main.c.bak.original  main_bak  quicksort.h
two_bintree_approximate _failed2/: main.c  main_print_debug.c
two_bintree_approximate/thro/: main_org.txt
two_bintree_approximate__CUDA_improve/: kernel.cu
two_bintree_approximate___CUDA/: 16points_rand.txt  graph.xlsx  kernel.cu
two_bintree_approximate___CUDA_Nsight_using/: KDtree_traverse__cuda.nsight-cuproj  kernel.cu
two_bintree_approximate___success_org/: J_SIMD.h  main-24-Hg_acEr.c  main.c
two_bintree_approximate_falied/: main.c
two_bintree_approximate_terminated_concept_too_hard/: CMakeLists.txt  _ref.c  main-24-Hg2.c  main.c  readme.txt
two_bintree_approximate_working/: CMakeLists.txt  main.c
two_bintree_approximate_wrong_goal/: CMakeLists.txt  main.c
(+758 files in other folders)
