cmake_minimum_required(VERSION 3.15)
project(two_bintree_approximate)

set(CMAKE_CXX_STANDARD 14)

include_directories()

add_executable(two_bintree_approximate
        .idea/.gitignore
        .idea/.name
        .idea/misc.xml
        .idea/modules.xml
        .idea/two_bintree_approximate.iml
        .idea/vcs.xml
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/two_bintree_approximate.cbp
        cmake-build-debug/two_bintree_approximate.exe
        main.c
        )
